tests/specs/ecosystem/sftsrv/synk/0_0_2.test
sftsrv/synk/0.0.2
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-type]: missing explicit type in the public API
 --> /src/async/types.ts:5:14
  | 
5 | export const Notify = z.object({
  |              ^^^^^^ this symbol is missing an explicit type
  = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/async/types.ts:15:14
   | 
15 | export const Push = <T extends Reference>(T: z.ZodType<T>) =>
   |              ^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /src/types.ts:27:14
   | 
27 | export const Reference = z.object({
   |              ^^^^^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/types.ts:53:14
   | 
53 | export const Changes = <T extends Reference>(T: z.ZodType<T>) =>
   |              ^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /src/types.ts:63:7
   | 
63 | const Command = z.union([z.literal("delete"), z.literal("put")])
   |       ^^^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/indexed-db/IndexedDBStore.ts:37:9
   | 
37 |   async init() {
   |         ^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/indexed-db/IndexedDBStore.ts:92:9
   | 
92 |   async getVersion() {
   |         ^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/in-memory/InMemoryReplicatedStore.ts:25:3
   | 
25 |   getVersion() {
   |   ^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/in-memory/InMemoryReplicatedStore.ts:43:3
   | 
43 |   getAll(fromVersion = 0) {
   |   ^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/in-memory/InMemoryReplicatedStore.ts:49:3
   | 
49 |   getOne(reference: Reference) {
   |   ^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/in-memory/InMemoryOwnedStore.ts:21:3
   | 
21 |   getVersion() {
   |   ^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/in-memory/InMemoryOwnedStore.ts:45:3
   | 
45 |   incrementVersion() {
   |   ^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/in-memory/InMemoryOwnedStore.ts:50:3
   | 
50 |   put(reference: T) {
   |   ^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/in-memory/InMemoryOwnedStore.ts:62:3
   | 
62 |   putMany(references: T[]) {
   |   ^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/in-memory/InMemoryOwnedStore.ts:77:3
   | 
77 |   getAll(fromVersion = 0) {
   |   ^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/in-memory/InMemoryOwnedStore.ts:83:3
   | 
83 |   getDeletes(fromVersion = 0) {
   |   ^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/in-memory/InMemoryOwnedStore.ts:89:3
   | 
89 |   getOne(reference: Reference) {
   |   ^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/in-memory/InMemoryOwnedStore.ts:93:3
   | 
93 |   delete(reference: Reference) {
   |   ^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/in-memory/InMemoryOwnedStore.ts:104:3
    | 
104 |   deleteMany(references: Reference[]) {
    |   ^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


